# chernobot

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  imgui.ini  install.sh  licence  readme  readme.md
chernoslave/: chernoslave.ino
cmake/: FindFFMPEG.cmake
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: chernobot.hpp  comm_interface.hpp  configurator_selector.hpp  imgui_impl_sdl_gl3.cpp  joystick_interface.hpp  joystick_setup_interface.hpp  macros.hpp  main.cpp  oculus.hpp  overseer.cpp  overseer.h  stopwatch_widget.hpp  util.hpp  video_interface.hpp
src/advd/: streamref.hpp  streamref_avfoundation.mm  streamref_l4v2.cpp  videostream.cpp  videostream.hpp
src/hpcp/: err.hpp  fs.hpp
src/input/: joystick.cpp
src/nimir/: graphics.cpp  graphics.h  gui.cpp  gui.h
src/util/: fin.h
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini  install_manifest.txt
